// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Replies> when there are no replies renders correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      style={
        Object {
          "fontStyle": "italic",
          "marginHorizontal": 5,
          "padding": 10,
        }
      }
    >
      &lt; 
      Voltar aos tópicos
    </Text>
  </TouchableOpacity>
  <Comment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
          "posts": Array [],
        },
        "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "edited": true,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "publishedAt": 2019-01-01T00:00:00.000Z,
        "replies": Array [],
        "totalReplies": 0,
      }
    }
    postId="10387-314fs-12asdbj"
  />
  <NoContent
    text="No replies right now, add one!"
  />
</View>
`;

exports[`Comments<Replies> when there are replies renders correctly 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      style={
        Object {
          "fontStyle": "italic",
          "marginHorizontal": 5,
          "padding": 10,
        }
      }
    >
      &lt; 
      Voltar aos tópicos
    </Text>
  </TouchableOpacity>
  <Comment
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/empower_two_women_logo.png",
          },
          "id": "1235we",
          "name": "Empodere Duas Mulheres",
          "posts": Array [],
        },
        "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "publishedAt": 2019-01-01T00:00:00.000Z,
        "replies": Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                    },
                    "id": "1235we",
                    "name": "Empodere Duas Mulheres",
                    "posts": Array [],
                  },
                  "comment": Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                      },
                      "id": "1235we",
                      "name": "Empodere Duas Mulheres",
                      "posts": Array [],
                    },
                    "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                    "edited": false,
                    "id": "21097",
                    "isAuthorCurrentUser": false,
                    "publishedAt": 2019-01-01T00:00:00.000Z,
                    "replies": Array [],
                    "totalReplies": 0,
                  },
                  "content": "Nao.",
                  "edited": false,
                  "id": "21097",
                  "isAuthorCurrentUser": false,
                  "link": null,
                  "publishedAt": 2019-01-01T00:00:00.000Z,
                },
              ],
              "title": "Meu pai fez o que ela mandou",
              "totalReplies": 1,
            },
            "content": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
            "edited": false,
            "id": "21098",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-02T00:00:00.000Z,
          },
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                    },
                    "id": "1235we",
                    "name": "Empodere Duas Mulheres",
                    "posts": Array [],
                  },
                  "comment": Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                      },
                      "id": "1235we",
                      "name": "Empodere Duas Mulheres",
                      "posts": Array [],
                    },
                    "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                    "edited": false,
                    "id": "21097",
                    "isAuthorCurrentUser": false,
                    "publishedAt": 2019-01-01T00:00:00.000Z,
                    "replies": Array [],
                    "totalReplies": 0,
                  },
                  "content": "Nao.",
                  "edited": false,
                  "id": "21097",
                  "isAuthorCurrentUser": false,
                  "link": null,
                  "publishedAt": 2019-01-01T00:00:00.000Z,
                },
              ],
              "title": "Meu pai fez o que ela mandou",
              "totalReplies": 1,
            },
            "content": "Nem faço mais questão de saber pra onde ele foi.",
            "edited": true,
            "id": "21099",
            "isAuthorCurrentUser": true,
            "link": "https://www.bbc.co.uk/news/business-50656178",
            "publishedAt": 2019-01-03T00:00:00.000Z,
          },
        ],
        "totalReplies": 2,
      }
    }
    postId="10387-314fs-12asdbj"
  />
  <View>
    <Text
      style={
        Object {
          "fontStyle": "italic",
          "fontWeight": "bold",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      2
       
      Respostas
    </Text>
    <FlatList
      contentContainerStyle={
        Object {
          "paddingBottom": 40,
        }
      }
      data={
        Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                    },
                    "id": "1235we",
                    "name": "Empodere Duas Mulheres",
                    "posts": Array [],
                  },
                  "comment": Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                      },
                      "id": "1235we",
                      "name": "Empodere Duas Mulheres",
                      "posts": Array [],
                    },
                    "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                    "edited": false,
                    "id": "21097",
                    "isAuthorCurrentUser": false,
                    "publishedAt": 2019-01-01T00:00:00.000Z,
                    "replies": Array [],
                    "totalReplies": 0,
                  },
                  "content": "Nao.",
                  "edited": false,
                  "id": "21097",
                  "isAuthorCurrentUser": false,
                  "link": null,
                  "publishedAt": 2019-01-01T00:00:00.000Z,
                },
              ],
              "title": "Meu pai fez o que ela mandou",
              "totalReplies": 1,
            },
            "content": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
            "edited": false,
            "id": "21098",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-02T00:00:00.000Z,
          },
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                },
                "id": "1235we",
                "name": "Empodere Duas Mulheres",
                "posts": Array [],
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                    },
                    "id": "1235we",
                    "name": "Empodere Duas Mulheres",
                    "posts": Array [],
                  },
                  "comment": Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                      },
                      "id": "1235we",
                      "name": "Empodere Duas Mulheres",
                      "posts": Array [],
                    },
                    "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                    "edited": false,
                    "id": "21097",
                    "isAuthorCurrentUser": false,
                    "publishedAt": 2019-01-01T00:00:00.000Z,
                    "replies": Array [],
                    "totalReplies": 0,
                  },
                  "content": "Nao.",
                  "edited": false,
                  "id": "21097",
                  "isAuthorCurrentUser": false,
                  "link": null,
                  "publishedAt": 2019-01-01T00:00:00.000Z,
                },
              ],
              "title": "Meu pai fez o que ela mandou",
              "totalReplies": 1,
            },
            "content": "Nem faço mais questão de saber pra onde ele foi.",
            "edited": true,
            "id": "21099",
            "isAuthorCurrentUser": true,
            "link": "https://www.bbc.co.uk/news/business-50656178",
            "publishedAt": 2019-01-03T00:00:00.000Z,
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={5}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
</View>
`;
